rust-examples/tests/compile-fail/Rule_22_5.rs
#![deny(clippy)]
#[deny(warnings)]

use std::fs::File;

fn main() {
    let f2 = File::open("open.txt").unwrap();
    println!("{}", *f2);
}